--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - images/logo.png
+  - images/logo2.png
   - images/btnhome.png
   - images/btnlupa.png
   - images/btnfavorito.png
