--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application
-        android:label="Vitrine ADM"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.vitrine">
+   <application
+        android:label="Vitrine Loja"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
