--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.11.0
-  firebase_storage: 
-  cloud_firestore:
+  firebase_storage: ^11.6.0
+  cloud_firestore: ^4.14.0 
   image_picker: ^1.0.4
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.1
-  file_picker: ^5.5.0
+  file_picker: ^6.1.1
   path_provider: ^2.0.14
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
