--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,14 @@ dependencies:
   cached_network_image: ^3.2.1
   file_picker: ^6.1.1
   path_provider: ^2.0.14
-
+  intl: ^0.17.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker_for_web: ^3.0.1
   font_awesome_flutter: ^10.1.0
   firebase_auth: ^4.5.0
+  firebase_messaging: ^14.0.0
   #flutter_svg: #it helps us to use SVG
   #Firebase Database
   
